<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_ros_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ky.37f.9850@s.thers.ac.jp">arata22</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
